fix webkit bug stretching .others images

--- a/src/components/AttachmentManager/AttachmentManager.scss
+++ b/src/components/AttachmentManager/AttachmentManager.scss
@@ -52,6 +52,9 @@
   background-size: cover;
   background-position: center;
   padding: 8px;
+  > img {
+    width: 100%;
+  }
 }
 
 .remove-image {
